# libkcapi

test_libkcapi/: CMakeLists.txt
test_libkcapi/lib/: CMakeLists.txt  kcapi-md.c  kcapi.h  libkcapi.so.1.2.0
test_libkcapi/src/: CMakeLists.txt  test_cmac_aes.c
